--- a/contacts2.css
+++ b/contacts2.css
@@ -6,11 +6,12 @@
 
 body {
     background-color: #FFEAC4;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 img {
-height: 157px;
-width: 226px;
+height: 200px;
+min-width: 250px;
 }
 
 button:hover {
@@ -49,6 +50,7 @@ button:hover {
     width: 90px;
     font-size: 16px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
 }
 
 h1 {
@@ -150,14 +152,14 @@ h1 {
     .menu__box {
      display: block;
      position: fixed;
-     top: 0;
+     top: -40px;
      right: -100%;
      width: 300px;
-     height: 100%;
+     height: 31%;
      margin: 0;
      padding: 80px 0;
      list-style: none;
-     background-color: aqua;
+     background-color: #FFEAC4;
      box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
      transition-duration: .25s;
      z-index: 5;
@@ -166,7 +168,7 @@ h1 {
      display: block;
      padding: 12px 24px;
      color: #333;
-     font-family: 'Roboto', sans-serif;
+     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-size: 20px;
      font-weight: 600;
      text-decoration: none;
