--- a/index.css
+++ b/index.css
@@ -32,14 +32,12 @@ button:hover {
 }
 
 .index-logo {
-    height: 157px;
-    width: 216px;
+    height: 200px;
+    min-width: 250px;
 }
 
 .index-routes {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     gap: 1em;
 }
 
@@ -51,6 +49,7 @@ button:hover {
     text-align: center;
     border: solid #F68121 1px;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 .i-tutvustus {
@@ -178,14 +177,14 @@ p {
     .menu__box {
         display: block;
         position: fixed;
-        top: 0;
+        top: -40px;
         right: -100%;
         width: 300px;
-        height: 100%;
+        height: 31%;
         margin: 0;
         padding: 80px 0;
         list-style: none;
-        background-color: aqua;
+        background-color: #FFEAC4;
         box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
         transition-duration: .25s;
         z-index: 5;
